Fix styling of the date selector on Mobile Safari

--- a/quickerpass/src/style.scss
+++ b/quickerpass/src/style.scss
@@ -51,27 +51,33 @@ h1 {
 
     .input-group {
         margin-bottom: 20px;
-    }
 
-    label {
-        display: block;
-        color: #555;
-        font-size: 14px;
-        font-weight: 500;
-        margin-bottom: 6px;
-    }
+        label {
+            display: block;
+            color: #555;
+            font-size: 14px;
+            font-weight: 500;
+            margin-bottom: 6px;
+        }
 
-    input, select {
-        width: 100%;
-        padding: 12px;
-        border: 2px solid #e0e0e0;
-        border-radius: 8px;
-        font-size: 14px;
-        transition: border-color 0.3s;
+        input, select {
+            width: 100%;
+            &[type=date] {
+                // This works on Mobile Safari. I haven't tested it on Mobile Anything Else
+                min-height: 46px;
+                appearance: none;
+            }
+            padding: 12px;
+            border: 2px solid #e0e0e0;
+            border-radius: 8px;
+            font-size: 14px;
+            transition: border-color 0.3s;
+            background-color: white;
 
-        &:focus {
-            outline: none;
-            border-color: #667eea;
+            &:focus {
+                outline: none;
+                border-color: #667eea;
+            }
         }
     }
 
